--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # Hive dependencies:
-  hive:
-  hive_flutter:
-  path_provider:
-  date_format:
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.11
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator:
-  build_runner:
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
