--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   date_format: ^2.0.7
+  # Heatmap
+  flutter_heatmap_calendar: ^1.0.5
 
 dev_dependencies:
   flutter_test:
