--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^2.0.0
+  cloud_firestore: ^4.2.0
+  firebase_auth: ^4.2.1
   # Hive dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
